--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 deploy.ant.properties.file=C:\\Users\\datth\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-file.reference.commons-fileupload-1.2.2.jar=E:\\PRJ301\\lib\\commons-fileupload-1.2.2.jar
-file.reference.commons-io-2.4.jar=E:\\PRJ301\\lib\\commons-io-2.4.jar
-file.reference.gson-2.8.2.jar=E:\\PRJ301\\lib\\gson-2.8.2.jar
-file.reference.javax.mail.jar=E:\\PRJ301\\lib\\javax.mail.jar
-file.reference.json-lib-2.4-jdk15.jar=E:\\PRJ301\\lib\\json-lib-2.4-jdk15.jar
+file.reference.commons-io-2.4.jar=C:\\Users\\datth\\Downloads\\commons-io-2.4.jar\\commons-io-2.4.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\datth\\Downloads\\jar_files (2)\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\datth\\Downloads\\jar_files (1)\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=C:\\Users\\datth\\Downloads\\javax.mail.jar
+file.reference.sqljdbc42.jar=C:\\Users\\datth\\Downloads\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 selected.browser=default
