--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,7 @@ file.reference.javax.mail.jar=C:\\Users\\datth\\Downloads\\javax.mail.jar
 file.reference.sqljdbc42.jar=C:\\Users\\datth\\Downloads\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
+javac.debug=true
+javadoc.preview=true
 selected.browser=default
 user.properties.file=C:\\Users\\datth\\AppData\\Roaming\\NetBeans\\13\\build.properties
